force-app/main/default/objects/Product2/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the parent product in product grouping and variant hierarchies. Used by CatalogJsonBuilderGrouping, CatalogJsonBuilderVariant, and CatalogJsonBuilderGroupingWithVariants.</description>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Child Products</relationshipLabel>
    <relationshipName>Child_Products</relationshipName>
    <type>Lookup</type>
</CustomField>