force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the product group/family for three-tier hierarchies (Group → Product → Variant). Used by CatalogJsonBuilderGroupingWithVariants to populate ec_product_family.</description>
    <label>Product Group</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products in Group</relationshipLabel>
    <relationshipName>Products_in_Group</relationshipName>
    <type>Lookup</type>
</CustomField>