force-app/main/default/objects/Product2/fields/Variant_Color__c.field-meta.xml
<CustomField>
    <fullName>Variant_Color__c</fullName>
    <description>Color attribute for product variants. Maps to ec_variant_color in Coveo Commerce payloads.</description>
    <label>Variant Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>