force-app/main/default/objects/Product2/fields/Variant_Material__c.field-meta.xml
<CustomField>
    <fullName>Variant_Material__c</fullName>
    <description>Material attribute for product variants. Maps to ec_variant_material in Coveo Commerce payloads.</description>
    <label>Variant Material</label>
    <length>50</length>
    <type>Text</type>
</CustomField>