force-app/main/default/objects/Product2/fields/Variant_Size__c.field-meta.xml
<CustomField>
    <fullName>Variant_Size__c</fullName>
    <description>Size attribute for product variants. Maps to ec_variant_size in Coveo Commerce payloads.</description>
    <label>Variant Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>