force-app/main/default/objects/Product2/fields/Variant_Style__c.field-meta.xml
<CustomField>
    <fullName>Variant_Style__c</fullName>
    <description>Style attribute for product variants. Maps to ec_variant_style in Coveo Commerce payloads.</description>
    <label>Variant Style</label>
    <length>50</length>
    <type>Text</type>
</CustomField>